# test

./: vsi_dfx_lab.xpr
vsi_auto_gen/: system_1.cxx
vsi_auto_gen/.SystemView/soat/source/: block.tcl.soa.py  block_Makefile.soa.py  directives.tcl.soa.py  driver.sh.soa.py  gen_power_report.tcl.soa.py  sources.soa.py  sources_aiengine.soa.py  system_Makefile.soa.py  target.cxx.soa.py  top_Makefile.soa.py
vsi_auto_gen/.platform/ultra96_platform/: p_u96_pl_zynq_ultra_ps_e_0.parms  p_u96_pl_zynq_ultra_ps_e_0_init.cxx  p_u96_pl_zynq_ultra_ps_e_0_init.h  partial_reconfig_utils.tcl  platform_utils.tcl  u96_pl.parms  u96_pl.tcl  u96_pl.xdc  u96_ps.parms  u96_r5.parms  ultra96_platform.plat  ultra96_platform.yaml  xczu3eg-sbva484-1-e.crdb  xczu3eg-sbva484-1-e.yaml
vsi_auto_gen/hls/system_1/: Makefile
vsi_auto_gen/hls/system_1/u96_pl/: Makefile
vsi_auto_gen/hls/system_1/u96_pl/min_max/: Makefile  min_max.tcl
vsi_auto_gen/hls/system_1/u96_pl/min_max/min_max/: vivado_hls.app
vsi_auto_gen/hls/system_1/u96_pl/speedometer/: Makefile  directives_1.tcl  gen_power_report.tcl  speedometer.tcl
vsi_auto_gen/hls/system_1/u96_pl/speedometer/speedometer/: vivado_hls.app
vsi_auto_gen/hw/system_1/: u96_pl._tcl_  u96_pl.gv  u96_pl.tcl  u96_pl_gen_bitbin.sh
vsi_auto_gen/hw/system_1/u96_pl/0/: pr_set_0_0.tcl  pr_set_0_1.tcl
vsi_auto_gen/sw/system_1/u96_ps/: CMakeLists.txt  Toolchain.cmake  cp.exp  driver.sh  logrun.sh
vsi_auto_gen/sw/system_1/u96_ps/include/: vsi_dfx_lab_u96_ps.cxx  webcam.h
vsi_auto_gen/sw/system_1/u96_ps/src/: init_hw_u96_ps.cxx  main.cxx  u96_ps.cxx  webcam.cc
vsi_auto_gen/yaml/kernels/: min_max.1.yaml  speedometer.1.yaml
vsi_auto_gen/yaml/presets/: display_0.yaml  fcorner_shmem.yaml  min_max.yaml  minmax_shmem.yaml  speedometer.yaml  webcam_0.yaml
vsi_dfx_lab.cache/wt/: cpd.wdf  gui_handlers.wdf  java_command_handlers.wdf  webtalk_pa.xml
vsi_dfx_lab.srcs/sources_1/bd/system_1/: system_1.bd  system_1.bxml
vsi_dfx_lab.srcs/sources_1/bd/system_1/ip/system_1_pr_set_0_4/: system_1_pr_set_0_4.xci  system_1_pr_set_0_4.xml
vsi_dfx_lab.srcs/sources_1/bd/system_1/ip/system_1_pr_set_0_6/: system_1_pr_set_0_6.xci  system_1_pr_set_0_6.xml
vsi_dfx_lab.srcs/sources_1/bd/system_1/ip/system_1_vsi_context_0/: system_1_vsi_context_0.xci  system_1_vsi_context_0.xml
vsi_dfx_lab.srcs/sources_1/bd/system_1/ui/: bd_8240444a.ui  bd_82404451.ui  bd_82424491.ui  bd_c50947a1.ui
vsi_dfx_lab.srcs/sources_1/bd/ultra96_platform/: ultra96_platform.bd  ultra96_platform.bxml
vsi_dfx_lab.srcs/sources_1/bd/ultra96_platform/ui/: bd_96472789.ui
vsi_dfx_lab.srcs/sources_1/bd/vsi_configurable_design/: vsi_configurable_design.bxml
(+227 files in other folders)
